navbar and first section

--- a/index.html
+++ b/index.html
@@ -19,17 +19,27 @@
         </nav>
     </header>
     <main>
-        <section id="about">
+        <section class="about">
             <!-- Contenido de la sección sobre nosotros -->
+            
+            <p class="text-about" >Abc marketing, es una agencia
+                 enfocada en el desarrollo de estrategias creativas e innovadoras 
+                 mediante herramientas digitales</p>
+                
+                 <img class="img-about" src="img/3.png" alt="">
         </section>
-        <section id="services">
+        <section class="who">
             <!-- Contenido de la sección de servicios -->
+            <h1>¿Quienes somos?</h1>
+            <p>Somos Abc una empresa que impulsa a las micro y grandes
+            empresarios a proyectarse estrategicamente en el mundo digital.</p>
+            <p>Nuestra mision es establecer una comunicacion dinamica, eficaz y productiva entre 
+            nuestros clientes y su publico, que satisfagan sus deseos y necesidades.</p>
+                <img class="img-who" src="img/4.png" alt="">
         </section>
-        <section id="values">
+        <section class="values">
             <!-- Contenido de la sección de valores corporativos -->
-        </section>
-        <section id="contact">
-            <!-- Contenido de la sección de contacto -->
+            <h2>Valores corporativos</h2>
         </section>
     </main>
     <footer>
