--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <nav class="navbar">
             <ul class="navbar-nav">
                 <li class="nav-item"><img class="nav-item-img" src="img/home-outline.svg" href="index.html"></img></li>
-                <li class="nav-item"><a href="pages/servicios.html">Servicios</a></li>
-                <li class="nav-item"><a href="pages/nuestroTrabajo.html">Nuestro Trabajo</a></li>
-                <li class="nav-item"><a href="pages/contacto.html">Contacto</a></li>
+                <li class="nav-item"><a href="servicios.html">Servicios</a></li>
+                <li class="nav-item"><a href="nuestroTrabajo.html">Nuestro Trabajo</a></li>
+                <li class="nav-item"><a href="contacto.html">Contacto</a></li>
                 <button class="nav-item-btn">Donar</button>
             </ul>
         </nav>
@@ -57,7 +57,7 @@
     </main>
     <footer>
         <!-- Contenido del footer -->
-        <img class="facebook" src="Imagenes/icono facebock.png" alt="">
+        <img class="facebook" src="Imagenes/icono facebock.png" alt="@AbcMarketing">
         <img class="instagram" src="Imagenes/Icono instagram.png" alt="">
         <img class="youtube" src="Imagenes/icono youtube.png" alt="">
     </footer>
