--- a/nuestroTrabajo.html
+++ b/nuestroTrabajo.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abc Marketing</title>
     <link rel="stylesheet" href="Css/nuestroTrabajo.css">
+    <link href="https://db.onlinewebfonts.com/c/066ce24dae3730ed6c648b09efaea93a?family=Acumin+Variable+Concept" rel="stylesheet" type="text/css"/>
 </head>
 <body>
     <header>
