--- a/contacto.html
+++ b/contacto.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar">
             <ul class="navbar-nav">
-                <li class="nav-item"><a href="index.html"><img class="nav-item-img" src="img/home-outline.svg" ></img></a></li>
+                <li class="nav-item"><a href="index.html"><img class="nav-item-img" src="Imagenes/home-outline.svg" ></img></a></li>
                 <li class="nav-item"><a href="servicios.html">Servicios</a></li>
                 <li class="nav-item"><a href="nuestroTrabajo.html">Nuestro Trabajo</a></li>
                 <li class="nav-item"><a href="contacto.html">Contacto</a></li>
@@ -49,7 +49,7 @@
         </section>
         
         <section class="donacion">
-            <button type="submit" class="btn-donar">Donar</button>
+            <button type="submit" class="btn-donar" onclick="location.href='https://vaki.co/es/vaki/Ut610g9z7QFMDqWz1kPO?utm_source=copy&utm_medium=vaki-page&utm_campaign=v4'" >Donar</button>
             <!-- Contenido de la sección de servicios -->
             <div class="vaki" >
                 <div class="vaki-text" >
