--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar">
             <ul class="navbar-nav">
-                <li class="nav-item"><a href="index.html"><img class="nav-item-img" src="img/home-outline.svg" ></img></a></li>
+                <li class="nav-item"><a href="index.html"><img class="nav-item-img" src="Imagenes/home-outline.svg" ></img></a></li>
                 <li class="nav-item"><a href="servicios.html">Servicios</a></li>
                 <li class="nav-item"><a href="nuestroTrabajo.html">Nuestro Trabajo</a></li>
                 <li class="nav-item"><a href="contacto.html">Contacto</a></li>
